今天复习了CSS基础知识和背景控制

--- a/Day003/css的优先级.html
+++ b/Day003/css的优先级.html
@@ -2,17 +2,31 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-<link href="./mycss.css" type="text/css" rel="stylesheet">
 <title>index</title>
 <style type="text/css">
+p{
+	color:green;
+}
+
+.test2 p{
+	color:red;
+}
+
+#test1 p{
+	color:blue;
+}
+
+div #test1{
+	color:pink;
+}
+
+
+
 </style>
 </head>
 <body>
-	<div id="test1" class="test2" style="background:pink">
+	<div id="test1" class="test2">
 		<p>我又不是变色龙<p>
 	</div>
-	<div></div>
-	<div></div>
-	<div></div>
 </body>
 </html>
