--- a/Day003/引入式css.html
+++ b/Day003/引入式css.html
@@ -8,7 +8,7 @@
 </style>
 </head>
 <body>
-	<div id="test1" class="test2" style="background:pink">
+	<div id="test1" class="test2">
 		<p>我又不是变色龙<p>
 	</div>
 	<div></div>
