--- a/Day003/背景图片01.html
+++ b/Day003/背景图片01.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-<link href="./mycss.css" type="text/css" rel="stylesheet">
 <title>index</title>
 <style type="text/css">
+body{
+	background-color:purple;
+	background-image:url(./images/Never.jpg);
+	_background-repeat:no-repeat;
+	background-repeat:repeat-y;
+	background-position:50% 0%;
+	background-attachment:fixed;
+	height:2000px;
+}
 </style>
 </head>
 <body>
-	<div id="test1" class="test2" style="background:pink">
-		<p>我又不是变色龙<p>
-	</div>
-	<div></div>
-	<div></div>
-	<div></div>
 </body>
 </html>
