练习了一天的网页布局,进度还是太慢后面的学习需要加速

--- a/Day04/minilionhit/index.html
+++ b/Day04/minilionhit/index.html
@@ -6,35 +6,6 @@
 <link href="./css/index.css" type="text/css" rel="stylesheet"/>
 <title>index</title>
 <style type="text/css">
-#container{
-	width:1002px;
-}
-
-#header{
-	height:128px;
-	background:gray url(./images/top_bg.jpg);
-}
-
-#nav li{
-	float:left;
-	width:90px;
-	margin-right:1px;
-}
-
-#nav a:link{
-	font-size:15px;
-	font-family:"微软雅黑", "黑体", "sans-serif";
-	color:#363636;
-	display:block;
-	width:90px;
-	height:37px;
-	text-align:center;
-}
-#nav a:hover{
-	color:white;
-	background:url(./images/nav_on.gif);
-
-}
 </style>
 </head>
 <body>
@@ -50,30 +21,110 @@
 				<li><a href="#">导航6</a></li>
 				<li><a href="#">导航7</a></li>
 			</ul>
+			<form action="">
+				<p>
+					<input id="keyword" type="text" value="search" name="keyword"/>
+				</p>
+				<p>
+					<img id="so" src="./images/search.gif"/>
+				</p>
+			</form>
+		</div>
+		<div id="banner">
+			<img alt="灵犀科技-banner" src="./images/about_banner.jpg"/>
 		</div>
 		<div id="main">
 			<div id="lside">
-				<div class="subtitle"></div>
-				<div class="four"></div>
-				<div class="four"></div>
-				<div class="four"></div>
-				<div class="four"></div>
+				<div class="subtitle">
+					<img src="./images/circle.gif" alt="cirle"/>
+					<h1>核心业务</h1>
+					<a herf="#">MORE&gt;&gt;</a>
+				</div>
+				<div class="four">
+					<h2>电子商务类网站建设</h2>
+					<img src="./images/eshop_service.jpg" alt=""/>
+					<ul>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+					</ul>
+				</div>
+				<div class="four">
+					<h2>新闻门户类网站建设</h2>
+					<img src="./images/eshop_service.jpg" alt=""/>
+					<ul>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+					</ul>
+				</div>
+				<div class="four">
+					<h2>企业展示类网站建设</h2>
+					<img src="./images/eshop_service.jpg" alt=""/>
+					<ul>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+					</ul>
+				</div>
+				<div class="four">
+					<h2>网站维护外包</h2>
+					<img src="./images/eshop_service.jpg" alt=""/>
+					<ul>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+						<li><a href="#">方便的订单管理</a></li>
+					</ul>
+				</div>
 			</div>
 			<div id="rside">
-				<div class="subtitle"></div>
+				<div class="subtitle">
+					<img src="./images/circle.gif" alt="cirle"/>
+					<h1>文章观点</h1>
+					<a herf="#">MORE&gt;&gt;</a>
+				</div>
 				<ul id="art">
-					<li>文章1</li>
-					<li>文章2</li>
-					<li>文章3</li>
-					<li>文章4</li>
-					<li>文章5</li>
-					<li>文章6</li>
-					<li>文章7</li>
+					<li><a href="#">这是一篇好文章</a></li>
+					<li><a href="#">这是一篇好文章</a></li>
+					<li><a href="#">这是一篇好文章</a></li>
+					<li><a href="#">这是一篇好文章</a></li>
+					<li><a href="#">这是一篇好文章</a></li>
 				</ul>
+				<div class="subtitle">
+					<img src="./images/circle.gif" alt="cirle"/>
+					<h1>联系我们</h1>
+					<a herf="#">MORE&gt;&gt;</a>
+				</div>
+				<div id="contact_info">
+				</div>
 			</div>
 			<div class="clear"></div>
 		</div>
-		<div id="footer"></div>
+		<div id="footer">
+			<img alt="圆角背景" src="./images/footcorner_left_bg.gif" class="f_left"/>
+			<ul>
+				<li><a href="#">联系我们1</a></li>
+				<li><a href="#">联系我们1</a></li>
+				<li><a href="#">联系我们1</a></li>
+				<li><a href="#">联系我们1</a></li>
+				<li><a href="#">联系我们1</a></li>
+				<li><a href="#">联系我们1</a></li>
+				<li><a href="#">联系我们1</a></li>
+			</ul>	
+			<img alt="圆角背景" src="./images/footcorner_right_bg.gif" class="f_right"/>
+			<div id="address">
+				<address>
+					&copy;2006-2009 北京市灵犀慧通科技有限公司 版权所有 http://www.lionhit.com 京ICP备07020337号 
+				</address>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
