昨天练习的一些代码

--- a/Day04/minilionhit/index.html
+++ b/Day04/minilionhit/index.html
@@ -21,6 +21,7 @@
 				<li><a href="#">导航6</a></li>
 				<li><a href="#">导航7</a></li>
 			</ul>
+			<img id="icon" src="../images/hot_1.gif" alt="hot"/>
 			<form action="">
 				<p>
 					<input id="keyword" type="text" value="search" name="keyword"/>
